--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
         <p class="text-hint">натисніть enter щоб дізнатися погоду</p>
       </div>
 
-      <div class="weather__info"></div>
+      <div class="weather__info">
+        <div class="common-info__wrapper">
+          <h3 class="common-info__title">Основна інформація про погоду</h3>
+          <p class="common-info" id="temperature"></p>
+        </div>
+      </div>
     </div>
 
     <script type="module" src="/src/main.js"></script>
-
-    
   </body>
 </html>
