--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="common-info__wrapper">
           <h3 class="common-info__title">Основна інформація про погоду</h3>
           <p class="common-info" id="temperature"></p>
+          <p class="common-info" id="weathercode"></p>
         </div>
       </div>
     </div>
